--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "name": "quizz-frontend",
   "version": "0.1.0",
+  "author": "htdinh",
   "private": true,
   "scripts": {
     "dev": "next dev",
@@ -9,17 +10,29 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@emotion/react": "^11.11.1",
+    "@emotion/styled": "^11.11.0",
+    "@fontsource/roboto": "^5.0.8",
+    "@mui/icons-material": "^5.14.9",
+    "@mui/material": "^5.14.10",
+    "@mui/styled-engine-sc": "^5.14.8",
     "@types/node": "20.6.0",
     "@types/react": "18.2.21",
     "@types/react-dom": "18.2.7",
     "autoprefixer": "10.4.15",
-    "eslint": "8.49.0",
+    "bulma": "^0.9.4",
     "eslint-config-next": "13.4.19",
+    "gulp": "^4.0.2",
     "next": "13.4.19",
     "postcss": "8.4.29",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "styled-components": "^5.3.11",
     "tailwindcss": "3.3.3",
     "typescript": "5.2.2"
+  },
+  "devDependencies": {
+    "eslint": "^8.49.0",
+    "prettier": "^3.0.3"
   }
 }
