Add the summary question and add nextjs ui

--- a/package.json
+++ b/package.json
@@ -16,12 +16,14 @@
     "@mui/icons-material": "^5.14.9",
     "@mui/material": "^5.14.10",
     "@mui/styled-engine-sc": "^5.14.8",
+    "@nextui-org/react": "^2.1.13",
     "@types/node": "20.6.0",
     "@types/react": "18.2.21",
     "@types/react-dom": "18.2.7",
     "autoprefixer": "10.4.15",
     "bulma": "^0.9.4",
     "eslint-config-next": "13.4.19",
+    "framer-motion": "^10.16.4",
     "gulp": "^4.0.2",
     "next": "13.4.19",
     "postcss": "8.4.29",
