--- a/package.json
+++ b/package.json
@@ -20,11 +20,13 @@
     "@types/node": "20.6.0",
     "@types/react": "18.2.21",
     "@types/react-dom": "18.2.7",
+    "antd": "^5.10.2",
     "autoprefixer": "10.4.15",
     "bulma": "^0.9.4",
     "eslint-config-next": "13.4.19",
     "framer-motion": "^10.16.4",
     "gulp": "^4.0.2",
+    "lodash": "^4.17.21",
     "next": "13.4.19",
     "postcss": "8.4.29",
     "react": "18.2.0",
